# book-api

./: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
book_api/: asgi.py  settings.py  urls.py
src/book_api/: asgi.py  base_test.py  settings.py  urls.py  wsgi.py
